; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_reset_viewport.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_reset_viewport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"gs_reset_viewport\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_reset_viewport() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = call i32 @gs_valid(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %13

6:                                                ; preds = %0
  %7 = call i32 @gs_get_size(i64* %1, i64* %2)
  %8 = load i64, i64* %1, align 8
  %9 = trunc i64 %8 to i32
  %10 = load i64, i64* %2, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @gs_set_viewport(i32 0, i32 0, i32 %9, i32 %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local i32 @gs_get_size(i64*, i64*) #1

declare dso_local i32 @gs_set_viewport(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
